# mlxLinuxCompilation

./: CMakeLists.txt  Makefile  README.md  fdf.h  grafon.c  main.c
.github/workflows/: ccpp.yml  cpp_macosx.yml
libft/: ft_memccpy.c  libft.h
